@@ -1,3 +1,6 @@
+from datetime import date
+from datetime import datetime
+from datetime import timedelta
 from opengever.ogds.base.utils import CookieStorage
 from opengever.testing import FunctionalTestCase
 
@@ -21,8 +24,15 @@ class TestCookieStorage(FunctionalTestCase):
         self.storage['foo'] = 'bar'
 
         self.assertEquals({'foo': 'bar'}, self.request.cookies)
-        self.assertEquals({'foo': {'quoted': True, 'value': 'bar'}},
-                          self.request.RESPONSE.cookies)
+        self.assertDictContainsSubset(
+            {'quoted': True, 'value': 'bar'},
+            self.request.RESPONSE.cookies['foo'])
+
+    def test_sets_cookie_expiration_date(self):
+        self.storage['foo'] = 'bar'
+        expires = self.request.RESPONSE.cookies['foo']['expires']
+        expiry_date = datetime.strptime(expires, "%a, %d-%b-%Y %H:%M:%S GMT")
+        self.assertEquals(date.today() + timedelta(days=30), expiry_date.date())
 
     def test_deleter(self):
         self.request.cookies['foo'] = 'peter'
