@@ -15,6 +15,10 @@ Changelog
   current admin unit's first org unit.
   [lgraf]
 
+- CookieStorage: Extend max age of cookies to 30 days (was
+  "end of browser session" before).
+  [lgraf]
+
 
 4.1.0 (2014-12-18)
 ------------------
